# side_x_side_stereo

./: CMakeLists.txt  README.md  package.xml
config/: left.yaml  ost.txt  right.yaml
src/: side_by_side_stereo_node.cpp
