<?xml version="1.0"?>
<package format="2">
  <name>side_x_side_stereo</name>
  <version>0.0.0</version>
  <description>Splits a stream of side-by-side stereo images into left
     and right iamges.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dave.n6nz@gmail.com">Dave Curtis</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/side_x_side_stereo</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="dave.n6nz@gmail.com">Dave Curtis</author> -->
  <author email="dirksavage88@gmail.com">Andrew Brahim</author> -->
 
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>python3-opencv</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>image_common</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
